Resolve CP3 review findings: active-streaming test parity, reader retransmission, capstone docs
Addresses all 22 CP3 code-review findings (17 Major, 3 Minor, 2 Info) for the
opt-in streaming shuffle subsystem.

Production (core/src/main/scala/org/apache/spark/shuffle/streaming):
- StreamingShuffleReader: bounded CRC32C-mismatch retransmission within the
  producer deadline (RetransmittableBlockException + exponential backoff);
  invalidates and throws FetchFailedException only after the attempt budget or
  deadline is exhausted (zero data loss preserved).
- StreamingShuffleManager: ordered, idempotent teardown seams
  (Backpressure -> Spill -> inner Sort -> state).
- BackpressureRpcEndpoint: fix latent import-order Scalastyle error.

Tests (core/src/test/scala/org/apache/spark/shuffle/streaming):
- ReaderSuite: aggregator / map-side-combine / key-ordering sort-parity tests
  and transient-CRC32C retransmission recovery; Scalastyle import-order,
  non-ASCII, and line-length fixes.
- ManagerSuite: getWriter/getReader dispatch, executor-mode collaborator gating,
  ordered + idempotent stop().
- IntegrationSuite / IntegrationTest: active dual-flag parity vs sort across
  reduceByKey and groupByKey/join at >=10 partitions (skew/chained/large/config).
- FailureInjectionSuite: silent-producer timeout semantics and real end-to-end
  DAG recomputation; exactly 10 zero-data-loss scenarios.
- StressSuite: active-streaming sustained loop with ~10% failure injection and
  no-retained-heap assertions.
- StreamingShufflePerformanceBenchmark: wrap run-instruction line to <=98 cols.

Docs / governance:
- decision-log.md: add Alternatives Considered column; reduce deviations to the
  single F-115 stub; rewrite the traceability matrix with exact paths + suites.
- executive-summary.html: correct MDC fields (range/task_attempt_id); add
  accessibility aria attributes; add crossorigin + an SRI-posture note; load
  Lucide before the Mermaid ESM module.
- index.md: align the 10 failure sce